--- a/admin/i18n/it/translations.json
+++ b/admin/i18n/it/translations.json
@@ -1,9 +1,4 @@
 {
-  "Auto": "Auto",
-  "Manual": "Manuale",
-  "My select": "La mia selezione",
-  "on save adapter restarts with new config immediately": "su save adapter si riavvia immediatamente con la nuova configurazione",
-  "template adapter settings": "impostazioni dell'adattatore del modello",
-  "test1": "Test 1",
-  "test2": "Test 2"
+  "Username": "Nome utente",
+  "Password": "Parola d'ordine"
 }
