--- a/admin/i18n/pt/translations.json
+++ b/admin/i18n/pt/translations.json
@@ -1,9 +1,4 @@
 {
-  "Auto": "Auto",
-  "Manual": "Manual",
-  "My select": "Meu selecionado",
-  "on save adapter restarts with new config immediately": "no adaptador de salvar reinicia com nova configuração imediatamente",
-  "template adapter settings": "configurações do adaptador de modelo",
-  "test1": "Teste 1",
-  "test2": "Teste 2"
+  "Username": "Nome de usuário",
+  "Password": "Senha"
 }
